Fix spacing between form and responses

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,6 @@ main {
 }
 
 .App {
-    width: calc(100vw - 328px);
+    width: 65%;
     box-sizing: border-box;
 }
