--- a/src/TextArea/TextArea.scss
+++ b/src/TextArea/TextArea.scss
@@ -1,9 +1,7 @@
 form {
-    // width: calc(100vw - 328px);
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(100vh - 153px);
     font-size: 1rem;
 
 }
